fixed spacing issue on forecast bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -182,6 +182,7 @@ h1 {
 
 .weekItem {
   flex-grow: 1;
+  max-width: 14.2857%;
 }
 
 .weekItem > h1 {
@@ -193,6 +194,12 @@ h1 {
   border-width: 2px;
   padding: 10px;
   background-color: lightgray;
+}
+
+@media only screen and (orientation: portrait) {
+  .weekItemContent > p {
+    font-size: 15px;
+  }
 }
 
 .current {
